--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,46 @@
-.App {
-  text-align: center;
+.app {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.app-loading {
+  background-color: #EEEEEE;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.app-header {
+  border-bottom: 1px solid #CCC;
+  padding: 10px;
 }
 
-.App-intro {
-  font-size: large;
+.app-container {
+  flex: 1 1 0;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.app-sidebar {
+  flex: 0 0 auto;
+  width: 300px;
+  border-right: 1px solid #CCC;
+  padding: 10px;
+}
+
+.app-contents {
+  flex: 1 1 0;
+  padding: 10px;
+}
+
+.channel-list {
+  list-style: none;
+}
+
+.channel-list-item {
+  padding: 10px;
+  border-bottom: 1px solid #CCC;
 }
