--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
-body {
+html, body, #root {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6, th, td, ul, li, p {
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
 }
