--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,8 @@
   flex-direction: column;
 }
 
-.app-loading {
-  background-color: #EEEEEE;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .app-header {
-  border-bottom: 1px solid #CCC;
+  border-bottom: 1px solid #A3A3A3;
   padding: 10px;
 }
 
@@ -27,20 +18,11 @@
 .app-sidebar {
   flex: 0 0 auto;
   width: 300px;
-  border-right: 1px solid #CCC;
-  padding: 10px;
+  border-right: 1px solid #A3A3A3;
+  overflow: auto;
 }
 
 .app-contents {
   flex: 1 1 0;
-  padding: 10px;
-}
-
-.channel-list {
-  list-style: none;
-}
-
-.channel-list-item {
-  padding: 10px;
-  border-bottom: 1px solid #CCC;
+  overflow: auto;
 }
