--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 html, body, #root {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
   width: 100%;
   height: 100%;
+  font-family: '.SFNSDisplay-Regular', 'Helvetica Neue', 'Lucida Grande', sans-serif;
+  color: #303942;
 }
 
 * {
@@ -14,4 +15,8 @@ h1, h2, h3, h4, h5, h6, th, td, ul, li, p {
   font-weight: normal;
   margin: 0;
   padding: 0;
+}
+
+ul, ol {
+  list-style-type: none;
 }
