--- a/src/components/channel-info/styles.css
+++ b/src/components/channel-info/styles.css
@@ -1,21 +1,17 @@
-.messages {
-  border-collapse: collapse;
-  width: 100%;
+.messages-container {
+  flex: 1 1 0;
+
+  display: flex;
+  flex-direction: column;
 }
 
-.messages th, .messages td {
-  padding: 10px;
-  text-align: left;
+.messages-table {
+  flex: 1 1 0;
+  overflow: auto;
 }
 
-.messages th {
-  font-weight: bold;
-  background-color: #F3F3F3;
-  border-bottom: 1px solid #A3A3A3;
-}
-
-.message td {
-  border-bottom: 1px solid #F0F0F0;
-  white-space: nowrap;
-  overflow: hidden;
+.message-info {
+  flex: 0 0 auto;
+  max-height: 50vh;
+  overflow: auto;
 }
