--- a/src/components/channel-info/message-info/styles.css
+++ b/src/components/channel-info/message-info/styles.css
@@ -1,3 +1,41 @@
 .message-info {
+  flex: 1 1 0;
 
+  background-color: #F9F9F9;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.message-info-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.message-info-detail {
+  flex: 0 0 auto;
+}
+
+.message-info-payload {
+  flex: 1 1 0;
+  overflow: auto;
+  background-color: #FFF;
+  font-size: 1rem;
+  padding: 10px;
+}
+
+.message-info-row {
+  padding: 10px;
+  border-bottom: 1px solid #E6E6E6;
+  display: flex;
+}
+
+.message-info-label {
+  flex: 0 0 60px;
+  font-weight: bold;
+}
+
+.message-info-value {
+  flex: 1 1 0;
 }
