--- a/src/components/channel-info/styles.css
+++ b/src/components/channel-info/styles.css
@@ -1,17 +1,26 @@
 .messages-container {
   flex: 1 1 0;
-
   display: flex;
   flex-direction: column;
 }
 
+.selected-message-empty {
+  flex: 1 1 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #F9F9F9;
+}
+
 .messages-table {
   flex: 1 1 0;
+  display: flex;
   overflow: auto;
 }
 
-.message-info {
-  flex: 0 0 auto;
-  max-height: 50vh;
-  overflow: auto;
+.selected-message-info {
+  flex: 0 0 50vh;
+  height: 50vh;
+  border-top: 1px solid #A3A3A3;
+  display: flex;
 }
