--- a/src/components/channel-list/styles.css
+++ b/src/components/channel-list/styles.css
@@ -1,8 +1,24 @@
 .channel-list {
+  flex: 1 1 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.channel-list-header {
+  background-color: #F3F3F3;
+  font-weight: bold;
+  flex: 0 0 auto;
+  padding: 10px;
+  border-bottom: 1px solid #A3A3A3;
+}
+
+.channel-list-contents {
+  flex: 1 1 0;
+  overflow: auto;
 }
 
 .channel-list-item {
-  padding: 10px;
+  padding: 0 10px;
   border-bottom: 1px solid #F0F0F0;
   cursor: pointer;
   display: flex;
@@ -23,6 +39,7 @@
 
 .title {
   flex: 1 1 0;
+  padding: 10px 0;
   margin-right: 10px;
   white-space: nowrap;
   overflow: hidden;
