--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ html, body, #root {
   width: 100%;
   height: 100%;
   font-family: '.SFNSDisplay-Regular', 'Helvetica Neue', 'Lucida Grande', sans-serif;
+  font-size: 12px;
   color: #303942;
 }
 
