--- a/src/components/channel-info/messages-table/styles.css
+++ b/src/components/channel-info/messages-table/styles.css
@@ -19,6 +19,14 @@
   border-bottom: 1px solid #A3A3A3;
 }
 
+.message-table-wrapper .public_fixedDataTableCell_wrap1.status-error {
+  background-color: #FF9390;
+}
+
+.message-table-wrapper .public_fixedDataTableCell_wrap1.status-ok {
+  background-color: #E3F7DA;
+}
+
 .message-table-wrapper .public_fixedDataTableCell_wrap1.selected {
   background-color: #F3F3F3;
 }
