--- a/src/components/channel-list/styles.css
+++ b/src/components/channel-list/styles.css
@@ -10,6 +10,26 @@
   flex: 0 0 auto;
   padding: 10px;
   border-bottom: 1px solid #A3A3A3;
+
+  display: flex;
+  align-items: center;
+}
+
+.channel-list-header-filter {
+  flex: 1 1 0;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.channel-list-header-filter-input {
+  flex: 1 1 0;
+}
+
+.channel-list-header-clear {
+  flex: 0 0 auto;
+  display: flex;
+  align-items: center;
 }
 
 .channel-list-contents {
